files/manifests/demoapps/k8sSecretDAPManifest.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8ssecretdap
  namespace: demoapps
  labels:
    app: k8ssecretdap
spec:
  replicas: 1
  selector:
    matchLabels:
      role: demo
      app: k8ssecretdap
  template:
    metadata:
      labels:
        role: demo
        app: k8ssecretdap
    spec:
      serviceAccountName: k8ssecretdap-account
      shareProcessNamespace: true
      containers:
      - name: k8s-app
        image: centos
        command: ["sleep","infinity"]
        imagePullPolicy: IfNotPresent
