files/manifests/demoapps/summonManifest.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: summon
  namespace: demoapps
  labels:
    app: summon
spec:
  replicas: 1
  selector:
    matchLabels:
      role: demo
      app: summon
  template:
    metadata:
      labels:
        role: demo
        app: summon
    spec:
      serviceAccountName: summon-account
      shareProcessNamespace: true
      containers:
      - name: authenticator
        image: cyberark/conjur-authn-k8s-client
        imagePullPolicy: Always
      - name: summonapp
        image: captainfluffytoes/summon_retrieve:latest
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /run/conjur
            name: conjur-access-token
      volumes:
        - name: conjur-access-token
          emptyDir:
            medium: Memory
