files/manifests/demoapps/pythonManifest.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python
  namespace: demoapps
  labels:
    app: python
spec:
  replicas: 1
  selector:
    matchLabels:
      role: demo
      app: python
  template:
    metadata:
      labels:
        role: demo
        app: python
    spec:
      serviceAccountName: python-account
      shareProcessNamespace: true
      containers:
      - name: authenticator
        image: cyberark/conjur-authn-k8s-client
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /run/conjur
            name: conjur-access-token
      - name: simpleapp
        image: captainfluffytoes/python_app:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /run/conjur
            name: conjur-access-token
        ports:
          - containerPort: 5000
            protocol: TCP
      volumes:
        - name: conjur-access-token
          emptyDir:
            medium: Memory

---
apiVersion: v1
kind: Service
metadata:
  name: python
  namespace: demoapps
spec:
  ports:
  - name: http
    port: 80
    targetPort: 5000
  selector:
    app: python
  type: NodePort
