files/manifests/demoapps/gogsManifest.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogs
  namespace: demoapps
  labels:
    app: scm
spec:
  replicas: 1
  selector:
    matchLabels:
      role: scm
      app: gogs
  template:
    metadata:
      labels:
        role: scm
        app: gogs
    spec:
      serviceAccountName: gogs-account
      containers:
      - name: gogs
        imagePullPolicy: Always
        image: gogs/gogs
        ports:
          - name: http
            containerPort: 3000
          - name: ssh
            containerPort: 22
        volumeMounts:
          - mountPath: /data
            name: storage
        readinessProbe:
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: gogsstorage

---
apiVersion: v1
kind: Service
metadata:
  name: gogs-page
  namespace: demoapps
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  - name: ssh
    port: 22
    targetPort: 22
  selector:
    app: gogs
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gogs
  namespace: demoapps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gogs.k8scluster.local
    http:
      paths:
      - path: /
        backend:
          serviceName: gogs-page
          servicePort: 80
