files/manifests/demoapps/jenkinsManifest.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: demoapps
  labels:
    app: ci
spec:
  replicas: 1
  selector:
    matchLabels:
      role: ci
      app: jenkins
  template:
    metadata:
      labels:
        role: ci
        app: jenkins
    spec:
      serviceAccountName: jenkins-account
      shareProcessNamespace: true
      containers:
      - name: jenkins
        imagePullPolicy: Always
        image: jenkins/jenkins
        ports:
          - containerPort: 443
            protocol: TCP
          - containerPort: 8080
            protocol: TCP
        volumeMounts:
          - mountPath: /run/conjur
            name: conjur-access-token
            readOnly: true
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
          - mountPath: /var/jenkins_home
            name: storage
      - name: authenticator
        image: cyberark/conjur-authn-k8s-client
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /run/conjur
            name: conjur-access-token
      volumes:
        - name: conjur-access-token
          emptyDir:
            medium: Memory
        - name: storage
          persistentVolumeClaim:
            claimName: jenkinsstorage
           
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-page
  namespace: demoapps
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 443
  selector:
    app: jenkins
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: demoapps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jenkins.k8scluster.local
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-page
          servicePort: 80
